fix possible overlapping

--- a/src/components/ConnectBar/ConnectBar.scss
+++ b/src/components/ConnectBar/ConnectBar.scss
@@ -9,7 +9,6 @@
   height: 3vw;
   margin-left: 58vw;
   margin-top: 16vw;
-  z-index: 5;
   @include tablet {
     margin-top: 15.5vw;
   }
